--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,22 @@
         <!-- Edit meta tags for SEO -->
         <title>GongoraTechFolio | Gongora Tech Portfolio</title>
         <meta name="title" content="GongoraTechFolio | Gongora Tech Portfolio" />
-        <meta name="description" content="This is my portfolio [GongorsTech]" />
+        <meta name="description" content="This is my portfolio [GongoraTech]" />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://developerfolio.js.org/" />
+        <meta property="og:url" content="https://gongoratech.onrender.com/" />
         <meta property="og:title" content="GongoraTechFolio | Gongora Tech Portfolio" />
-        <meta property="og:description" content="This is my portfolio [GongorsTech]" />
+        <meta property="og:description" content="This is my portfolio [GongoraTech]" />
+
         <!-- Link to a hosted image -->
-        <!-- <meta property="og:image" content=""> -->
+        <meta property="og:image" content="https://gongoratech.onrender.com/avatar.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://developerfolio.js.org/" />
+        <meta property="twitter:url" content="https://gongoratech.onrender.com/" />
         <meta property="twitter:title" content="GongoraTechFolio | Gongora Tech Portfolio" />
-        <meta property="twitter:description" content="This is my portfolio [GongorsTech]" />
+        <meta property="twitter:description" content="This is my portfolio [GongoraTech]" />
         <!-- Link to a hosted image -->
         <!-- <meta property="twitter:image" content=""> -->
 
